So far, I turn this off every time it comes on.

--- a/init.el.org
+++ b/init.el.org
@@ -676,11 +676,11 @@ Found on this [[http://www.lunaryorn.com/posts/center-buffer-text-in-emacs.html]
   :ensure t
   :defer t
   :bind (("C-c t v" . visual-fill-column-mode))
-  :init
-  (dolist (hook '(visual-line-mode-hook
-                  prog-mode-hook
-                  text-mode-hook))
-    (add-hook hook #'visual-fill-column-mode))
+  ;; :init
+  ;; (dolist (hook '(visual-line-mode-hook
+  ;;                 prog-mode-hook
+  ;;                 text-mode-hook))
+  ;;   (add-hook hook #'visual-fill-column-mode))
   :config (setq-default visual-fill-column-center-text t
                         visual-fill-column-fringes-outside-margins nil))
 
